--- a/Pod_Projeto_Votacao/nbproject/project.properties
+++ b/Pod_Projeto_Votacao/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Pod_Projeto_Votacao
+application.title=Socket-Aula
 application.vendor=Fatinha de Sousa
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,11 +25,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Pod_Projeto_Votacao.jar
+dist.jar=${dist.dir}/Socket-Aula.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.postgresql-9.3-1101.jdbc41.jar=lib/postgresql-9.3-1101.jdbc41.jar
+file.reference.=..\\..\\..\\..\\..\\..\\..\\..\\
+file.reference.postgresql-9.3-1101.jdbc41.jar=lib\\postgresql-9.3-1101.jdbc41.jar
 file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
 jar.compress=false
